--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Make WASM Build
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  build-and-publish:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -10,7 +10,7 @@ jobs:
     - name: Install Emscripten
       uses: lovasoa/setup-emscripten@master
       with: 
-        emscripten-version: '3.1.14'
+        emscripten-version: '3.1.16'
 
     - name: Building WASM bundle
       run: make app
