--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,9 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install Emscripten
-      uses: lovasoa/setup-emscripten@master
+      uses: mymindstorm/setup-emsdk@v11
       with: 
-        emscripten-version: '3.1.16'
+        version: 1.38.40
 
     - name: Building WASM bundle
       run: make app
