--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
 
     - name: Building WASM bundle
       run: make app
+
+    - name: Directory listing..
       run: ls -la
 
     - name: Publish build
