--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,10 @@
 name: Make WASM Build
 on: [push]
+
+env:
+  EM_VERSION: 1.38.40
+  EM_CACHE_FOLDER: 'emsdk-cache'
+
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
@@ -7,10 +12,18 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    - name: Setup cache
+      id: cache-system-libraries
+      uses: actions/cache@v2
+      with:
+        path: ${{env.EM_CACHE_FOLDER}}
+        key: ${{env.EM_VERSION}}-${{ runner.os }}
+
     - name: Install Emscripten
       uses: mymindstorm/setup-emsdk@v11
       with: 
-        version: 1.38.40
+        version: ${{env.EM_VERSION}}
+        actions-cache-folder: ${{env.EM_CACHE_FOLDER}}
 
     - name: Building WASM bundle
       run: make app
